fix(desktop): clean up console warnings, fix skipping while paused to cause no audio